--- a/index.html
+++ b/index.html
@@ -70,10 +70,7 @@
           <h1>Welcome to FUD Alumni Connect</h1>
           <p class="subtitle">Empowering Connections, Celebrating Success</p>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat
-            praesentium sapiente doloremque excepturi perferendis sit iure tempore
-            reiciendis deserunt totam reprehenderit laboriosam aliquam, quasi
-            dolore ipsa ad architecto! Minima, veritatis!
+            We are thrilled to welcome you to the Federal University Dutse (FUD) Alumni Portal—a dedicated space designed to keep you connected with your alma mater and fellow graduates. Here, you can engage in networking opportunities, stay updated on alumni events, contribute to the university community, and access exclusive alumni benefits.
           </p>
         </div>
   
